update jetty defaults
have higher stack recommendations and java garbage collection notices